--- a/views/new_quiz.ejs
+++ b/views/new_quiz.ejs
@@ -3,6 +3,9 @@
 <form action="/quizzes" method="post">
   Quiz Name: <input type="text" name="name" id="name" value="" />
   <br>
+  Quiz success message:
+  <input type="text" name="successMessage" id="" value="" />
+  <br>
 
   <button type="submit">Save</button>
 </form>
