--- a/views/individual_question.ejs
+++ b/views/individual_question.ejs
@@ -1,6 +1,6 @@
 <div class='question'>
   <h3><%= question.name %></h3>
-  <h4><%= question.description %></h4>
+  <h4><%- question.description %></h4>
 
   <% var questionInputName = 'question-' + question.number; %>
   <% if (question.type === 'truefalse') { %>
@@ -11,37 +11,27 @@
   <% if (question.type === 'multiple') { %>
   <div class='multiple-choices'>
     <div class='choice choice1'>
-      <h5>Choice 1</h5>
-      <p><%= question.choice1 %></p>
-      <p>
-        Select choice 1:
-        <input type='radio' name="<%=questionInputName%>" value="1">
-      </p>
+      <input type='radio' name="<%=questionInputName%>" value="1">
+      <%= question.choice1 %>
     </div>
     <div class='choice choice2'>
-      <h5>Choice 2</h5>
-      <p><%= question.choice2 %></p>
-      <p>
-        Select choice 2:
-        <input type='radio' name="<%=questionInputName%>" value="2">
-      </p>
+      <input type='radio' name="<%=questionInputName%>" value="2">
+      <%= question.choice2 %>
     </div>
-    <div class='choice choice3'>
-      <h5>Choice 3</h5>
-      <p><%= question.choice3 %></p>
-      <p>
-        Select choice 3:
+
+    <% if (question.choice3) { %>
+      <div class='choice choice3'>
         <input type='radio' name="<%=questionInputName%>" value="3">
-      </p>
-    </div>
-    <div class='choice choice4'>
-      <h5>Choice 4</h5>
-      <p><%= question.choice4 %></p>
-      <p>
-        Select choice 4:
+        <%= question.choice3 %>
+      </div>
+    <% } %>
+
+    <% if (question.choice4) { %>
+      <div class='choice choice4'>
         <input type='radio' name="<%=questionInputName%>" value="4">
-      </p>
-    </div>
+        <%= question.choice4 %>
+      </div>
+    <% } %>
   </div>
   <% } %>
 </div>
